--- a/Website/Home.html
+++ b/Website/Home.html
@@ -34,7 +34,7 @@
         <div class="u-align-left u-container-style u-group u-white u-group-1">
           <div class="u-container-layout u-container-layout-1">
             <h2 class="u-text u-text-default u-text-1">콘솔로 구현한 완벽한 카지노</h2>
-            <p class="u-text u-text-default u-text-grey-50 u-text-2">지금 다운로드하세요. &gt;&gt;&nbsp;https://bit.ly/3rSeNiI&nbsp;<br>CASINO.EXE 클릭하기
+            <p class="u-text u-text-default u-text-grey-50 u-text-2">지금 다운로드하세요. &gt;&gt;&nbsp;<a href=https://bit.ly/2X1cvTh>https://bit.ly/3xCEup3&nbsp;</a> <br>CASINO.EXE 클릭하기<br>압축비번은 zkwlsh
             </p>
           </div>
         </div>
